--- a/styles.css
+++ b/styles.css
@@ -35,11 +35,13 @@
 }
 
 .aboutMe h1{
-    font-size: 55px;    
+    font-size: 55px; 
+    margin-left: 3%;   
 }
 
 .aboutMe p {
     font-size: 20px;
+    margin-left: 3%;
 }
 
 .more a {
@@ -374,6 +376,17 @@ footer .main-footer {
         padding-left: 3%;
    }
 
+   .aboutMe h1{
+    font-size: 55px; 
+    margin-left: 9%;   
+    }
+
+    .aboutMe p {
+        font-size: 20px;
+        margin-left: 9%;
+    }
+
+
    .more a svg {
     margin-bottom: 15px;
    } 
@@ -417,11 +430,21 @@ footer .main-footer {
     }
 
     .projects {
-        height: auto;
+        height: 100vh;
     }
 }
 
 @media (min-width: 576px) and (max-width: 767px) {
+    .aboutMe h1{
+        font-size: 55px; 
+        margin-right: 3%;   
+        }
+    
+    .aboutMe p {
+        font-size: 20px;
+        margin-right: 3%;
+    }
+
     .technologies p {
         margin-bottom: 0%;
     }
